# acastos-fact-query

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/scripts/: criterion_compare.py
.github/workflows/: bench.yml  ci.yml  fuzz.yml
ascent-jit/: Cargo.toml
ascent-jit-web/: Cargo.toml  README.md
ascent-jit-web/src/: lib.rs
ascent-jit/benches/: expr.rs  joins.rs  queries.rs
ascent-jit/fuzz/: Cargo.toml
ascent-jit/fuzz/fuzz_targets/: expr.rs  macro_even_odd.rs  macro_shortest_path.rs  macro_transitive_closure.rs  program.rs
ascent-jit/src/: eval.rs  expr.rs  fuzz.rs  ir.rs  lib.rs  parser.rs  value.rs  wasm.rs
ascent-jit/tests/: adhoc_query.rs  column_types.rs  default_deny.rs  differential.rs  fuzz_diff.rs  provenance.rs  semantics.rs  speculative.rs
docs/: 0001-ascent-jit-runtime-engine.md  0002-fact-query-substrate.md  0003-external-fact-sources.md  0004-pluggable-wasm-execution.md  0005-single-wasm-module.md  0006-typescript-node-binding.md  0007-engine-snapshot-serialization.md  0008-benchmarks-and-the-join-jit-deferral.md  README.md
fact-query/: Cargo.toml  README.md
fact-query-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
fact-query-node/bench/: bench.cjs
fact-query-node/src/: lib.rs
fact-query-node/test/: index.test.cjs
fact-query-node/ts/: index.ts
fact-query/src/: engine.rs  error.rs  lib.rs  query.rs  result.rs  schema.rs  source.rs
fact-query/tests/: queries_grain.rs
tutorial/: 01-foundations.md  02-modeling-structure.md  03-collections-keys-grounding.md  README.md
