[workspace]
resolver = "3"
members = [
    "ascent-jit",
    "fact-query",
]
# Crates built/run outside the stable native workspace:
# - `ascent-jit/fuzz` needs nightly + libFuzzer (`cargo +nightly fuzz run`).
# - `ascent-jit-web` is wasm32-only (`cargo build -p ascent-jit-web --target
#   wasm32-unknown-unknown`); it pulls browser-only deps (js-sys/wasm-bindgen).
# - `fact-query-node` is wasm32-only too (the Node.js/TypeScript binding); built
#   via its own npm pipeline (`cd fact-query-node && npm run build`).
exclude = [
    "ascent-jit/fuzz",
    "ascent-jit-web",
    "fact-query-node",
]

[workspace.package]
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moosingin3space/acastos-fact-query"
rust-version = "1.94.0"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { priority = -2, level = "deny" }
pedantic = { priority = -1, level = "deny" }
mod_module_files = "deny"
allow_attributes = "deny"

[workspace.dependencies]
# `default-features = false` so a `wasm32` consumer (e.g. `fact-query-node`
# building `fact-query --no-default-features`) does not have `wasmtime` forced
# into its graph by feature unification; native consumers get it back via
# `fact-query`'s on-by-default `wasmtime` feature.
ascent-jit = { path = "ascent-jit", version = "^0.1.0", default-features = false } #unified
