[package]
name = "ascent-jit-web"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/moosingin3space/acastos-fact-query"
description = "A browser WebAssembly executor for ascent-jit, so fact queries evaluate in place inside a wasm32 host instead of under a native runtime."
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The native `wasmtime` executor is dropped; this crate supplies its own.
ascent-jit = { path = "../ascent-jit", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
all = { priority = -2, level = "deny" }
pedantic = { priority = -1, level = "deny" }

# Detached from the parent workspace: this crate is wasm32-only and is built
# separately (`cargo build -p ascent-jit-web --target wasm32-unknown-unknown`),
# mirroring how `ascent-jit/fuzz` detaches for cargo-fuzz.
[workspace]
