[package]
name = "fact-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A governance-free proposer/verifier substrate over a Datalog fact base: parse, form-check, and bounded read-only evaluation of conjunctive queries with provenance."
keywords = ["datalog", "query", "neurosymbolic", "provenance", "verifier"]
categories = ["data-structures", "database"]
readme = "README.md"

[dependencies]
ascent-jit = { workspace = true } #unified

[features]
default = ["wasmtime"]
# Forwards `ascent-jit`'s default native executor. Build with
# `--no-default-features` for a `wasm32` consumer that supplies its own
# `WasmExecutor` and constructs the engine itself.
wasmtime = ["ascent-jit/wasmtime"]

[lints]
workspace = true
